# IPD-MARL

./: .gitignore  GEMINI.md  README.md  TODO.md  pyproject.toml  ruff.toml  test.py
.github/instructions/: GEMINI.md.instructions.md
configs/: config.yaml
configs/agent/: dqn.yaml  tabular_q.yaml
configs/env/: ipd.yaml
configs/eval/: default.yaml
configs/experiment/: baseline_tabular_vs_cooperator.yaml  baseline_tabular_vs_defector.yaml  baseline_tabular_vs_tft.yaml  dqn_vs_cooperator.yaml  dqn_vs_defector.yaml  dqn_vs_tft.yaml  evolution.yaml  evolution_0t_6d.yaml  evolution_0t_6d_axelrod.yaml  evolution_2t_4d.yaml  evolution_2t_4d_axelrod.yaml  evolution_3t_3d.yaml  evolution_3t_3d_axelrod.yaml  evolution_4t_2d.yaml  evolution_4t_2d_axelrod.yaml  evolution_6t_0d.yaml  evolution_6t_0d_axelrod.yaml
configs/opponent/: axelrod_cooperator.yaml  axelrod_defector.yaml  axelrod_titfortat.yaml  self_play.yaml
configs/train/: default.yaml
experiments/agent_vs_agent/224731_tabular_q_vs_self_play/: agent_model.json  metadata.json  metrics.csv  resolved_config.yaml
experiments/agent_vs_agent/224743_tabular_q_vs_self_play/: agent_model.json  metadata.json  metrics.csv  resolved_config.yaml
experiments/agent_vs_agent/224759_tabular_q_vs_self_play/: agent_model.json  metadata.json  metrics.csv  resolved_config.yaml
scripts/: analyze_dqn_behavior.py  analyze_experiments.py  evaluate.py  evolution.py  run_experiments.py  train.py  visualize.py
src/ipd_marl/: __init__.py
tests/: test_agent_interface.py  test_smoke_evolution.py  test_smoke_train.py
(+156 files in other folders)
